# rhasspy-skills-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-test.yml
rhasspy_skills_cli/: __main__.py  main.py  manifest.py
rhasspy_skills_cli/tests/: test_app.py
rhasspy_skills_cli/tests/testresources/time_example/: manifest.json  time_app.py
